--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,7 @@
 services:
   - type: web
     name: carbon-footprint-calculator
-    env: java
-    buildCommand: ./mvnw clean package -DskipTests
-    startCommand: java -jar target/carbon-0.0.1-SNAPSHOT.jar
+    env: docker
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
