Initial deployment commit

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,14 @@
 target/
+!target/*.jar
 .git/
 .gitignore
-README.md
-*.log
+.env
+*.md
+.DS_Store
+*.bat
+*.sh
+.mvn/wrapper/maven-wrapper.jar
+*.zip
+node_modules/
 .idea/
-.vscode/
 *.iml
-.settings/
-.project
-.classpath
